Acceptance tests hardening